# se-toolkit-lab-6

./: .env  .env.agent.example  .env.docker.example  .env.docker.secret  .env.example  .gitignore  AGENT.md  README.md  REVIEW.md  TEMP.md  agent.py  agent.py.backup  agent.py.task1.backup  pyproject.toml  run_eval.py  task-1-report.txt  test_agent.py  test_auth.sh
backend/: main.py
backend/app/: etl.py
backend/tests/: test_agent_output_fields_are_present.py
backend/tests/agent/: test_agent_task1.py  test_task1.py
backend/tests/unit/: test_agent.py  test_agent_task1.py
lab/tasks/: setup-simple.md
lab/tasks/required/: task-1.md  task-2.md  task-3.md
learning_management_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plans/: task-1.md  task-2.md  task-3.md
tests/: task-1.py  test_1.py  test_agent.py  test_agent_system.py  test_agent_task1.py  test_agent_task2.py  test_agent_task3.py  test_agent_tools.py  test_documentation_agent.py  test_task1.py  test_task2.py  test_task3_system_agent.py
wiki/: README.md  git-workflow.md  index.md
