[project]
name = "learning-management-service"
version = "0.1.0"
description = "Learning Management Service API"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
 
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
 
[tool.setuptools]
packages = []