[project]
name = "learning-management-service"
version = "0.1.0"
description = "Learning Management Service API"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.100.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
]
 
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
 
[tool.setuptools]
packages = []